--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -160,7 +160,19 @@ input, textarea, select, .uneditable-input {
 input {
   height: auto !important;
 }
+.checkbox{
+  margin-top: -10px;
+  margin-bottom: 10px;
+  span {
+    margin-left: 20px;
+    font-weight: normal;
+  }
+}
 
+ #session_remember_me {
+  width: auto;
+  margin-left: 0;
+}
 #error_explanation {
   color: red;
   ul {
@@ -175,3 +187,14 @@ input {
   }
 }
 
+/* Users index */
+
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid $gray-lighter;
+  }
+}
